캐릭터 메이킹 관련 번역 완료

--- a/ERB/SYSTEM/SYSTEM_DEBUG_구상색설정.ERB
+++ b/ERB/SYSTEM/SYSTEM_DEBUG_구상색설정.ERB
@@ -95,7 +95,7 @@ PRINTDL ↓汎用(特殊)구상
 TRYCCALLFORM KOJO_2_COLOR
 	GETCOLOR
 	PRINTFORM      2　
-	PRINTFORM ロボ風　　　　　　　　　　　　　　　　　
+	PRINTFORM 로봇풍　　　　　　　　　　　　　　　　　
 	PRINTFORM %TOSTR(RESULT:0,"X6")%
 	SETCOLOR ARG:0
 	PRINTFORM %TOSTR(ARG:0,"X6")%
@@ -107,7 +107,7 @@ CATCH
 		RESETCOLOR
 		GETDEFCOLOR
 		PRINTFORM      2　
-		PRINTFORM ロボ風　　　　　　　　　　　　　　　　　
+		PRINTFORM 로봇풍　　　　　　　　　　　　　　　　　
 		PRINTFORM %TOSTR(RESULT:0,"X6")%（デフォルト色）
 		PRINTL 
 	ENDIF
