--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_RANDOMNAMING.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_RANDOMNAMING.ERB
@@ -3,77 +3,77 @@
 @FIRSTSETTING_RANDOMNAMING_ALL
 #DIM LCOUNT,2
 #DIM LINE
-#DIM キープ中フラグ,20
-#DIM 上の句ジャンル,1
-#DIM 下の句ジャンル,1
-#DIM 上の句固定番号,1
-#DIM 下の句固定番号,1
+#DIM 고정플래그,20
+#DIM 윗구장르,1
+#DIM 아랫구장르,1
+#DIM 윗구고정번호,1
+#DIM 아랫구고정번호,1
 
 CALL LB
 LINE = LINECOUNT
-上の句ジャンル = 8
-下の句ジャンル = 8
+윗구장르 = 8
+아랫구장르 = 8
 
 GOTO INPUT_REGENERATE
 
 $INPUT_RESELECT
 LOCAL:5 = 0
-LOCAL:6 = 上の句ジャンル
+LOCAL:6 = 윗구장르
 DO
 	SIF LOCAL:5 == 0
 		FONTBOLD
-	PRINT 　上の句：
-	IF 上の句ジャンル == 0
+	PRINT 　　윗구：
+	IF 윗구장르 == 0
 		PRINTL 매지컬적인 단어
-	ELSEIF 上の句ジャンル == 1
+	ELSEIF 윗구장르 == 1
 		PRINTL 천체의 이름
-	ELSEIF 上の句ジャンル == 2
+	ELSEIF 윗구장르 == 2
 		PRINTL 색깔 이름
-	ELSEIF 上の句ジャンル == 3
+	ELSEIF 윗구장르 == 3
 		PRINTL 과일, 채소 등 식물의 이름
-	ELSEIF 上の句ジャンル == 4
+	ELSEIF 윗구장르 == 4
 		PRINTL 잡다한 영어 단어
-	ELSEIF 上の句ジャンル == 5
+	ELSEIF 윗구장르 == 5
 		PRINTL 보석의 이름
-	ELSEIF 上の句ジャンル == 6
+	ELSEIF 윗구장르 == 6
 		PRINTL 사람을 나타내는 단어
-	ELSEIF 上の句ジャンル == 7
+	ELSEIF 윗구장르 == 7
 		PRINTL 무기의 이름
-	ELSEIF 上の句ジャンル == 8
-		PRINTL ランダム
+	ELSEIF 윗구장르 == 8
+		PRINTL 랜덤
 	ENDIF
 	FONTREGULAR
 	SIF LOCAL:5 != 0
 		FONTBOLD
-	PRINT 　下の句：
-	IF 下の句ジャンル == 0
+	PRINT 　아랫구：
+	IF 아랫구장르 == 0
 		PRINTL 매지컬적인 단어
-	ELSEIF 下の句ジャンル == 1
+	ELSEIF 아랫구장르 == 1
 		PRINTL 천체의 이름
-	ELSEIF 下の句ジャンル == 2
+	ELSEIF 아랫구장르 == 2
 		PRINTL 색깔 이름
-	ELSEIF 下の句ジャンル == 3
+	ELSEIF 아랫구장르 == 3
 		PRINTL 과일, 채소 등 식물의 이름
-	ELSEIF 下の句ジャンル == 4
+	ELSEIF 아랫구장르 == 4
 		PRINTL 잡다한 영어 단어
-	ELSEIF 下の句ジャンル == 5
+	ELSEIF 아랫구장르 == 5
 		PRINTL 보석의 이름
-	ELSEIF 下の句ジャンル == 6
+	ELSEIF 아랫구장르 == 6
 		PRINTL 사람을 나타내는 단어
-	ELSEIF 下の句ジャンル == 7
+	ELSEIF 아랫구장르 == 7
 		PRINTL 무기의 이름
-	ELSEIF 下の句ジャンル == 8
-		PRINTL ランダム
+	ELSEIF 아랫구장르 == 8
+		PRINTL 랜덤
 	ENDIF
 	FONTREGULAR
 
 
 	IF LOCAL:5 == 0
-		PRINT 上
+		PRINT 윗
 	ELSE
-		PRINT 下
+		PRINT 아랫
 	ENDIF
-	PRINTL の句のジャンルを選択してください
+	PRINTL 구의 장르를 선택해 주십시오.
 	PRINTL [ 0] 매지컬적인 단어
 	PRINTL [ 1] 천체의 이름
 	PRINTL [ 2] 색깔 이름
@@ -82,25 +82,25 @@ DO
 	PRINTL [ 5] 보석의 이름
 	PRINTL [ 6] 사람을 나타내는 단어
 	PRINTL [ 7] 무기의 이름
-	PRINTL [ 8] ランダム
-	PRINTL [99] もどる
+	PRINTL [ 8] 랜덤
+	PRINTL [99] 돌아간다
 	PRINTL 
 	PRINT [100] 
 	IF LOCAL:5 == 0
-		PRINT 下
+		PRINT 아랫
 	ELSE
-		PRINT 上
+		PRINT 윗
 	ENDIF
-	PRINTL の句変更
-	PRINTL [200] 生成
+	PRINTL 구 변경
+	PRINTL [200] 생성
 
 	$INPUT_LOOP1
 	INPUT
 	IF RESULT >= 0 && RESULT <= 8
 		IF LOCAL:5==0
-			上の句ジャンル=RESULT
+			윗구장르=RESULT
 		ELSE
-			下の句ジャンル=RESULT
+			아랫구장르=RESULT
 		ENDIF
 		CLEARLINE LINECOUNT - LINE
 	ELSEIF RESULT == 99
@@ -120,29 +120,29 @@ DO
 LOOP 1
 CLEARLINE LINECOUNT - LINE
 
-;※「DA:(上の句0/下の句1):選択番号」となるようにランダム候補番号を入れておき、結果側で復元している
+;※「DA:(윗구 0/아랫구 1):선택 번호」가 되도록 랜덤 후보 번호를 넣어두고, 결과 측에서 복원하고 있다
 $INPUT_REGENERATE
 FOR LCOUNT, 0, 20, 1
 
-	IF キープ中フラグ:LCOUNT==1
+	IF 고정플래그:LCOUNT==1
 		CONTINUE
 	ENDIF
 	FOR LCOUNT:1, 0, 2, 1
 
-		IF (LCOUNT:1==0 && 上の句固定番号>0)
-			DA:(LCOUNT:1):LCOUNT=上の句固定番号
+		IF (LCOUNT:1==0 && 윗구고정번호>0)
+			DA:(LCOUNT:1):LCOUNT=윗구고정번호
 			CONTINUE
-		ELSEIF (LCOUNT:1==1 && 下の句固定番号>0)
-			DA:(LCOUNT:1):LCOUNT=下の句固定番号
+		ELSEIF (LCOUNT:1==1 && 아랫구고정번호>0)
+			DA:(LCOUNT:1):LCOUNT=아랫구고정번호
 			CONTINUE
 		ENDIF
 
 		LCOUNT:1 = LCOUNT:1
 
 		IF LCOUNT:1==0
-			LOCAL=上の句ジャンル
+			LOCAL=윗구장르
 		ELSE
-			LOCAL=下の句ジャンル
+			LOCAL=아랫구장르
 		ENDIF
 
 
@@ -213,23 +213,23 @@ FOR LCOUNT,0,20
 	PRINTFORM [{(LCOUNT), 2}] 
 	PRINTFORM %STR:(DA:0:LCOUNT)%%STR:(DA:1:LCOUNT),26-STRLENS(STR:(DA:0:LCOUNT)),LEFT%
 	PRINTPLAIN 　
-	IF キープ中フラグ:LCOUNT==1
+	IF 고정플래그:LCOUNT==1
 		CALL SETCOLOR_BY_STR, "금색"
-		PRINTFORM [{(LCOUNT)+1000, 4}] ★キープ 
+		PRINTFORM [{(LCOUNT)+1000, 4}] ★고정 
 		RESETCOLOR
 	ELSE
-		PRINTFORM [{(LCOUNT)+1000, 4}] ☆キープ 
+		PRINTFORM [{(LCOUNT)+1000, 4}] ☆고정 
 	ENDIF
 	PRINTPLAIN 　
-	PRINTFORM [{(LCOUNT)+2000, 4}] 上の句統一 
+	PRINTFORM [{(LCOUNT)+2000, 4}] 윗구 통일 
 	PRINTPLAIN 　
-	PRINTFORM [{(LCOUNT)+3000, 4}] 下の句統一 
+	PRINTFORM [{(LCOUNT)+3000, 4}] 아랫구 통일 
 	PRINTL 
 NEXT
 PRINTL 
-PRINT [100]ジャンルを絞り込む
-PRINTL 　　　　　[300] 上の句・下の句の反転
-PRINTL [200]再生成
+PRINT [100] 장르를 좁힌다
+PRINTL 　　　　　[300] 윗구・아랫구 반전
+PRINTL [200] 재생성
 
 
 $INPUT_LOOP2
@@ -238,18 +238,18 @@ IF RESULT >= 0 && RESULT < 20
 	RETURN RESULT
 ELSEIF RESULT == 100
 	CLEARLINE LINECOUNT - LINE
-	上の句固定番号=0
-	下の句固定番号=0
+	윗구고정번호=0
+	아랫구고정번호=0
 	GOTO INPUT_RESELECT
 ELSEIF RESULT == 200
 	CLEARLINE LINECOUNT - LINE
-	上の句固定番号=0
-	下の句固定番号=0
+	윗구고정번호=0
+	아랫구고정번호=0
 	GOTO INPUT_REGENERATE
 ELSEIF RESULT == 300
 	CLEARLINE LINECOUNT - LINE
 	FOR LCOUNT,0,20
-		IF !キープ中フラグ:(LCOUNT)
+		IF !고정플래그:(LCOUNT)
 			SWAP DA:0:LCOUNT,DA:1:LCOUNT
 		ENDIF
 	NEXT
@@ -257,26 +257,26 @@ ELSEIF RESULT == 300
 
 ELSEIF RESULT >=1000 && RESULT <=1019
 	CLEARLINE LINECOUNT - LINE
-	キープ中フラグ:(RESULT-1000)=1-キープ中フラグ:(RESULT-1000)
+	고정플래그:(RESULT-1000)=1-고정플래그:(RESULT-1000)
 	GOTO INPUT_PRINT
 ELSEIF RESULT >=2000 && RESULT <=2019
 	CLEARLINE LINECOUNT - LINE
-	上の句固定番号=DA:0:(RESULT-2000)
-	下の句固定番号=0
+	윗구고정번호=DA:0:(RESULT-2000)
+	아랫구고정번호=0
 	GOTO INPUT_REGENERATE
 ELSEIF RESULT >=3000 && RESULT <=3019
 	CLEARLINE LINECOUNT - LINE
-	上の句固定番号=0
-	下の句固定番号=DA:1:(RESULT-3000)
+	윗구고정번호=0
+	아랫구고정번호=DA:1:(RESULT-3000)
 	GOTO INPUT_REGENERATE
 ELSE
 	GOTO INPUT_LOOP2
 ENDIF
 
 ;----------------------------------------------------------
-;冠名と変身後名のランダム설정
+;관명과 변신 후 이름 랜덤 설정
 @FIRSTSETTING_RANDOMNAMING, ARG:0, ARG:1, ARGS
-PRINTL ジャンルを選択してください
+PRINTL 장르를 선택해 주십시오.
 PRINTL [ 0] 매지컬적인 단어
 PRINTL [ 1] 천체의 이름
 PRINTL [ 2] 색깔 이름
@@ -285,14 +285,14 @@ PRINTL [ 4] 잡다한 영어 단어
 PRINTL [ 5] 보석의 이름
 PRINTL [ 6] 사람을 나타내는 단어
 PRINTL [ 7] 무기의 이름
-PRINTL [ 8] ランダム
-PRINTL [99] もどる
+PRINTL [ 8] 랜덤
+PRINTL [99] 돌아간다
 
 $INPUT_LOOP
 INPUT
 LOCAL = RESULT
 IF RESULT >= 0 && RESULT <= 8
-	;乱数を引数にしているので、ジャンルを増やした場合はRANDを増やすのを忘れずに
+	;난수를 인수로 하고 있기 때문에, 장르를 늘렸을 경우에는 RAND를 늘리는 것을 잊지 말 것
 	CALL FIRSTSETTING_RANDOMNAMING_SELECT, ARG:0, RESULT, ARG:1, ARGS
 ELSEIF RESULT == 99
 	RETURN 99,0
@@ -303,10 +303,10 @@ RESULTS = %RESULTS%
 RETURN LOCAL, RESULT
 
 ;----------------------------------------------------------
-;名称の決定
-;冠名(ARG:0 = 0)と変身後名(ARG:0 = 1)共通のテーブル
-;ARG:1はジャンル、ARG:2はキャラ番号(変身後名の場合のみ)
-;ARGSはキャラの名前(キャラ名＋〇〇　〇〇＋キャラ名　の場合)
+;명칭 결정
+;관명(ARG:0 = 0)과 변신 후 이름(ARG:0 = 1) 공통의 테이블
+;ARG:1은 장르, ARG:2는 캐릭터 번호(변신 후 이름일 경우에만)
+;ARGS는 캐릭터의 이름(캐릭터명＋〇〇　〇〇＋캐릭터명　일 경우)
 @FIRSTSETTING_RANDOMNAMING_SELECT, ARG:0, ARG:1, ARG:2, ARGS
 PRINTL 
 
@@ -388,28 +388,28 @@ WHILE 1
 	ENDIF
 
 	REPEAT 20
-		PRINTFORML [{COUNT, 2}] %LOCALS:2%%STR:(LOCAL:COUNT)%%LOCALS:3%
+		PRINTFORML [{COUNT, 2}] %LOCALS:2% %STR:(LOCAL:COUNT)% %LOCALS:3%
 
 	REND
 
 	PRINTL 
-	PRINT [100] ジャンルから選びなおす
+	PRINT [100] 장르에서 다시 고른다
 	IF ARGS != ""
 		PRINT 　　　　　[800] 
 		SIF LOCAL:21 == 0
 			FONTBOLD
-		PRINTFORM  %ARGS% ＋ 単語 の順
+		PRINTFORM  (%ARGS% ＋ 단어) 순서
 		SIF LOCAL:21 == 0
 			FONTREGULAR
 	ENDIF
 	PRINTL 
 
-	PRINT [200] 再生成
+	PRINT [200] 재생성
 	IF ARGS != ""
 		PRINT 　　　　　　　　　　　　　[801] 
 		SIF LOCAL:21 == 1
 			FONTBOLD
-		PRINTFORM  単語 ＋ %ARGS% の順
+		PRINTFORM  (단어 ＋ %ARGS%) 순서
 		SIF LOCAL:21 == 1
 			FONTREGULAR
 	ENDIF
@@ -419,7 +419,7 @@ WHILE 1
 	INPUT
 
 	IF RESULT >= 0 && RESULT < 20
-		RESULTS = %LOCALS:2%%STR:(LOCAL:RESULT)%%LOCALS:3%
+		RESULTS = %LOCALS:2% %STR:(LOCAL:RESULT)% %LOCALS:3%
 		CSTR:(ARG:2):202 = %STR:(LOCAL:RESULT)%
 		RETURN 0
 	ELSEIF RESULT == 100
@@ -439,7 +439,7 @@ WHILE 1
 	ENDIF
 WEND
 
-;ARG:0 == 0なら冠名、ARG:0 == 1なら変身後名
+;ARG:0 == 0이라면 관명, ARG:0 == 1이라면 변신 후 이름
 IF ARG:0 == 0
 	SAVESTR:11 = %LOCALS%
 ELSEIF ARG:0 == 1
@@ -448,7 +448,7 @@ ENDIF
 
 
 @RANDOMNAMING_FROMGENRE(ARG)
-;1="매지컬적인 단어",2="천체의 이름","색깔 이름","과일, 채소 등 식물의 이름","잡다한 영어 단어","보석의 이름","사람을 나타내는 단어","무기의 이름",9="ランダム"
+;1="매지컬적인 단어",2="천체의 이름","색깔 이름","과일, 채소 등 식물의 이름","잡다한 영어 단어","보석의 이름","사람을 나타내는 단어","무기의 이름",9="랜덤"
 		;random
 		SIF ARG==9
 			ARG=1+RAND:8
