--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CROWNNAME.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CROWNNAME.ERB
@@ -1,21 +1,21 @@
 ﻿;**********************************************************
-;冠名の설정
+;관명 설정
 @FIRSTSETTING_CROWNNAME
-PRINTL 冠名を統一しますか？
-PRINTL （変身後名の頭につく単語＝個別설정における上の句です。
-PRINTL 『セーラー○○』『キュア××』のように
-PRINTL   変身後名を揃えたい場合に一括설정可能です）
-;	흑화時の名前変更にも影響します
+PRINTL 관명을 통일하시겠습니까?
+PRINTL （변신 후 이름의 머리에 붙는 단어＝개별 설정에 대한 윗구(上の句)입니다.
+PRINTL 『세일러 ○○』『큐어 ××』처럼
+PRINTL   변신 후 이름을 갖추고 싶을 경우 일괄 설정이 가능합니다.）
+;	흑화 시의 이름 변경에도 영향을 줍니다
 DRAWLINE
-PRINTL [0]冠名なし
-PRINTL [1]プリセットから選択
-PRINTL [2]自分で설정
-PRINTL [99]もどる
+PRINTL [0] 관명 없음
+PRINTL [1] 프리셋에서 선택한다
+PRINTL [2] 직접 설정한다
+PRINTL [99] 돌아간다
 $INPUT_LOOP
 INPUT
 IF RESULT == 0
 	FLAG:6 = 0
-	PRINTL 冠名を설정しませんでした
+	PRINTL 관명을 설정하지 않았습니다.
 ELSEIF RESULT == 1
 	FLAG:6 = 1
 	$INPUT_LOOP_CHILD_1_0
@@ -25,14 +25,14 @@ ELSEIF RESULT == 1
 	LOCAL = RESULT
 	$INPUT_LOOP_CHILD_1_1
 	IF RESULT == 99
-		PRINTFORML 冠名を설정しません。よろしいですか？
+		PRINTFORML 관명을 설정하지 않았습니다. 이대로 진행하시겠습니까?
 	ELSE
-		PRINTFORML 冠名を 『%RESULTS%』 とします。よろしいですか？
+		PRINTFORML 관명을『%RESULTS%』%조사만처리(RESULTS,"로")% 합니다. 이대로 좋습니까?
 	ENDIF
 	PRINTL [0] 아니오
 	PRINTL [1] 네
 	SIF SAVESTR:11 != ""
-		PRINTFORML [2]変更しない（%SAVESTR:11%）
+		PRINTFORML [2] 변경하지 않는다（%SAVESTR:11%）
 	$INPUT_LOOP_CHILD_1_2
 	INPUT
 	IF RESULT < 0 || RESULT > 2
@@ -44,18 +44,18 @@ ELSEIF RESULT == 1
 		SAVESTR:11 = %RESULTS%
 		IF RESULTS == ""
 			FLAG:6 = 0
-			PRINTL 冠名を설정しませんでした
+			PRINTL 관명을 설정하지 않았습니다.
 			RESULTS = 
 		ELSE
-			PRINTFORML 冠名を 『%SAVESTR:11%』 に설정しました
+			PRINTFORML 관명을『%SAVESTR:11%』%조사만처리(SAVESTR:11,"로")% 설정했습니다.
 		ENDIF
 	ELSEIF RESULT == 2
 	ENDIF
 ELSEIF RESULT == 2
 	FLAG:6 = 1
-	PRINTL 冠名を入力してください
+	PRINTL 관명을 입력해 주십시오.
 	SIF SAVESTR:11 != ""
-		PRINTFORML [999]変更しない（%SAVESTR:11%）
+		PRINTFORML [999] 변경하지 않는다（%SAVESTR:11%）
 	$INPUT_LOOP_CHILD_2
 	INPUTS
 	IF RESULTS == ""
@@ -63,7 +63,7 @@ ELSEIF RESULT == 2
 	ELSEIF RESULTS == "999"
 	ELSE
 		SAVESTR:11 = %RESULTS%
-		PRINTFORML 冠名を 『%SAVESTR:11%』 に설정しました
+		PRINTFORML 관명을『%SAVESTR:11%』%조사만처리(SAVESTR:11,"로")% 설정했습니다.
 	ENDIF
 ELSEIF RESULT == 99
 	RETURN 99
@@ -75,23 +75,23 @@ PRINTL
 
 @FIRSTSETTING_transnamegenre
 
-PRINTL 変身名に初期ジャンルを指定しますか？
-PRINTL （「セーラー〇〇」「キュアXX」の〇〇/XX部分、
-PRINTL   変身後の名前後半＝個別설정における下の句です。
-PRINTL   デフォルト生成に統一感を持たせたい場合に指定可能です）
+PRINTL 변신명에 초기 장르를 지정하시겠습니까?
+PRINTL （「세일러 〇〇」「큐어XX」의 〇〇/XX 부분에 해당,
+PRINTL   변신 후 이름 전후반＝개별 설정에 대한 아랫구(下の句)입니다.
+PRINTL   디폴트 생성에 통일감을 갖추고 싶은 경우에 지정 가능합니다.）
 DRAWLINE
-PRINTL [0]설정なし
-PRINTL [1]ジャンルを指定
-PRINTL [99]もどる
+PRINTL [0] 설정 없음
+PRINTL [1] 장르를 지정한다
+PRINTL [99] 돌아간다
 $INPUT_LOOP
 INPUT
 IF RESULT == 0
 	FLAG:820 = 0
-	PRINTL デフォルトジャンルを설정しませんでした
+	PRINTL 디폴트 장르를 설정하지 않았습니다.
 ELSEIF RESULT == 1
 	$INPUT_LOOP_CHILD_1_0
 
-	PRINTL ジャンルを選択してください
+	PRINTL 장르를 선택해 주십시오.
 
 	PRINTL [ 0] 매지컬적인 단어
 	PRINTL [ 1] 천체의 이름
@@ -101,8 +101,8 @@ ELSEIF RESULT == 1
 	PRINTL [ 5] 보석의 이름
 	PRINTL [ 6] 사람을 나타내는 단어
 	PRINTL [ 7] 무기의 이름
-	PRINTL [ 8] ランダム
-	PRINTL [99] キャンセル
+	PRINTL [ 8] 랜덤
+	PRINTL [99] 취소
 	INPUT
 	$INPUT_LOOP_CHILD_1_1
 	IF RESULT == 99
@@ -110,14 +110,14 @@ ELSEIF RESULT == 1
 	ELSEIF INRANGE(RESULT,0,8)
 		LOCAL=RESULT
 		LOCALS=%transnamegenre:RESULT%
-		PRINTFORML デフォルトジャンルを 『%LOCALS%』 とします。よろしいですか？
+		PRINTFORML 디폴트 장르를『%LOCALS%』%조사만처리(LOCALS,"로")% 합니다. 이대로 좋습니까?
 	ELSE
 		GOTO INPUT_LOOP_CHILD_1_0
 	ENDIF
 	PRINTL [0] 아니오
 	PRINTL [1] 네
 	SIF SAVESTR:11 != ""
-		PRINTFORML [2]変更しない%LOCALS!="" ? "（"+LOCALS+"）" # "（설정なし）" %
+		PRINTFORML [2] 변경하지 않는다%LOCALS!="" ? "（"+LOCALS+"）" # "（설정 없음）" %
 	$INPUT_LOOP_CHILD_1_2
 	INPUT
 	IF RESULT < 0 || RESULT > 2
@@ -127,10 +127,10 @@ ELSEIF RESULT == 1
 	ELSEIF RESULT == 1
 		IF LOCALS == ""
 			FLAG:820 = 0
-			PRINTL デフォルトジャンルを指定しませんでした
+			PRINTL 디폴트 장르를 지정하지 않았습니다.
 		ELSE
 			FLAG:820 = LOCAL+1
-			PRINTFORML デフォルトジャンルを 『%LOCALS%』 に설정しました
+			PRINTFORML 디폴트 장르를『%LOCALS%』%조사만처리(LOCALS,"로")% 설정했습니다.
 		ENDIF
 	ENDIF
 ENDIF
